styles/lastsupperstyles.css
/* Styling the "Home" and "About" internal links */

.links {
	white-space: nowrap;
}

a {
	display: inline-block;
	list-style: none;
	text-decoration: none;
	font-weight: bold;
	font-size: 18px;
	padding-bottom: 1em;
	padding-top: 1.3em;
}

a:link {
	color: yellow;
}

a:visited {
	color: yellow;
}

a:hover {
	color: yellow;
}

a:active {
	color: yellow;
}

.home {
	position: relative;
	margin-left: .2%;
}

.about {
	position: relative;
	margin-left: 13%;
}

/* Name, Artist and Year info */

.lastsupper-info {
	padding-top: 4.5em;
	color: white;
	font-size: 16px;
	font-family: "Georgia", serif;
}

.name {
	padding-bottom: 10px;
}

.artist {
	padding-bottom: 10px;
}

.year {
	padding-bottom: 10px;
}

/* Image */

.lastsupper-image {
	padding-top: 2.5em;
}

/* Decription of art */

.lastsupper-description {
	color: white;
	line-height: 25px;
	font-family: "Georgia", serif;
	font-size: 16px;
	padding-top: 2.5em;
}

/* Footer */

footer {
	color: yellow;
	padding-top: 2.5em;
}

